--- a/src/styles.css
+++ b/src/styles.css
@@ -98,10 +98,10 @@ body {
   flex-wrap: wrap;
   flex-direction: row;
   justify-content:space-around;
-  align-items: center;
+  align-items: flex-start;
   background-color: var(--containerBackground);
   padding: 10px 20px 60px 20px;
-  margin-top: 170px;
+  margin-top: 160px;
   scroll-margin-top: 200px;
   width: auto;
   height: auto;
@@ -117,7 +117,7 @@ body {
   border-radius: 50%;
   border: 5px solid var(--red);
   box-shadow: 5px 5px 20px var(--shadow);
-  width: auto;
+  width: 350px;
   transition: transform 0.5s;
   cursor: default; /* Add this line to remove pointer cursor */
 }
