--- a/src/styles.css
+++ b/src/styles.css
@@ -181,7 +181,7 @@ h1, h3 {
 }
 
 .drop-down-trigger:hover + .drop-down {
-  max-height: 300px;
+  max-height: 530;
   opacity: 1;
   border-color: var(--red);
   background-color: #4b4948;
